added javscript for the crystals and score

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="col-lg-3">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						00
+						<span id="targetNumber"></span>
 					</div>
 				</div>
 			</div>
@@ -58,8 +58,8 @@
 				<div class="col-lg-2 col-lg-offset-1">
 					<div class="panel panel-default">
 						<div class="panel-body">
-							<p>Wins:0</p>
-							<p>Losses:0</p>
+							<p>Wins: <span id="winCount"></span></p>
+							<p>Losses: <span id="lossCount"></span></p>
 						</div>
 					</div>
 				</div>
@@ -72,25 +72,25 @@
 					<div class="col-lg-6">
 
 						<div class="col-lg-3">
-							<a class="thumbnail">
+							<a id="bluebtn" class="thumbnail">
 							    <img src="assets/images/blueEmerald.jpg" alt="...">
 							 </a>
 						</div>
 					
 						<div class="col-lg-3">
-						    <a class="thumbnail">
+						    <a id="greenbtn" class="thumbnail">
 						      <img src="assets/images/greenEmerald.jpg" alt="...">
 						    </a>
 						</div>
 					
 						<div class="col-lg-3">
-						    <a class="thumbnail">
+						    <a id="yellowbtn" class="thumbnail">
 						      <img src="assets/images/yellowEmerald.jpg" alt="...">
 						    </a>
 						</div>
 
 						<div class="col-lg-3">
-						    <a class="thumbnail">
+						    <a id="purpbtn" class="thumbnail">
 						      <img src="assets/images/purpEmerald.jpg" alt="...">
 						    </a>
 						</div>
@@ -106,7 +106,7 @@
 							<p>Your total score is:</p>
 						</div>
 						<div class="panel-body">
-							<p>0</p>
+							<span id="totalScore"></span>
 						</div>
 					</div>
 				</div>
@@ -124,9 +124,9 @@
 
 
 <!-- Javascript -->
-<script src="assets/javascript/game.js" type="text/javascript"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="assets/javascript/game.js" type="text/javascript"></script>
    
 
 </body>
